// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query.checks order asc snapshot 1`] = `
Array [
  "シャワー浴びる",
  "右上",
  "左上",
  "肩まで入って１０数える",
]
`;

exports[`query.checks order desc snapshot 1`] = `
Array [
  "肩まで入って１０数える",
  "左上",
  "右上",
  "シャワー浴びる",
]
`;

exports[`query.positions checked snapshot 1`] = `
Object {
  "hash": Object {
    "x1": model {
      "_id": "x1",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
    "x2": model {
      "_id": "x2",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
    "y1": model {
      "_id": "y1",
      "position": Array [
        70,
        190,
        220,
        160,
        240,
      ],
    },
    "y2": model {
      "_id": "y2",
      "position": Array [
        20,
        90,
        20,
        60,
        40,
      ],
    },
  },
  "list": Array [
    model {
      "_id": "x1",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
    model {
      "_id": "y1",
      "position": Array [
        70,
        190,
        220,
        160,
        240,
      ],
    },
    model {
      "_id": "x2",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
    model {
      "_id": "y2",
      "position": Array [
        20,
        90,
        20,
        60,
        40,
      ],
    },
  ],
  "position": Object {
    "all": 2070,
    "avg": 103.5,
    "count": 20,
    "density": 9.409090909090908,
    "max": 240,
    "max_is": model {
      "_id": "y1",
      "position": Array [
        70,
        190,
        220,
        160,
        240,
      ],
    },
    "min": 20,
    "min_is": model {
      "_id": "y2",
      "position": Array [
        20,
        90,
        20,
        60,
        40,
      ],
    },
    "range": 220,
  },
  "set": Array [
    "x1",
    "y1",
    "x2",
    "y2",
  ],
}
`;

exports[`query.positions x1 snapshot 1`] = `
Object {
  "hash": Object {
    "x1": model {
      "_id": "x1",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
  },
  "list": Array [
    model {
      "_id": "x1",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
  ],
  "position": Object {
    "all": 480,
    "avg": 96,
    "count": 5,
    "density": 3,
    "max": 200,
    "max_is": model {
      "_id": "x1",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
    "min": 40,
    "min_is": model {
      "_id": "x1",
      "position": Array [
        40,
        60,
        80,
        100,
        200,
      ],
    },
    "range": 160,
  },
  "set": Array [
    "x1",
  ],
}
`;

exports[`query.todos checked snapshot 1`] = `
Array [
  model {
    "_id": 4,
    "checked": true,
    "label": "肩まで入って１０数える",
    "todo_id": 3,
  },
]
`;

exports[`query.todos labels snapshot 1`] = `
Array [
  "歯を磨く",
  "宿題をする",
  "お風呂はいる",
]
`;

exports[`query.todos not checked snapshot 1`] = `
Array [
  model {
    "_id": 3,
    "checked": false,
    "label": "シャワー浴びる",
    "todo_id": 3,
  },
]
`;
